// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio page should render a skeleton card when loading 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={4}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      gutterBottom={true}
      variant="h2"
    >
      portfolio title
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      gutterBottom={true}
      variant="body1"
    >
      portfolio description
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Tabs))
      aria-label="porfolio filter"
      centered={true}
      id="tab-filter"
      onChange={[Function]}
      value="ALL"
    >
      <WithStyles(ForwardRef(Tab))
        label="ALL"
        value="ALL"
      />
      <WithStyles(ForwardRef(Tab))
        label="FRONT-END"
        value="FRONTEND"
      />
      <WithStyles(ForwardRef(Tab))
        label="BACK-END"
        value="BACKEND"
      />
    </WithStyles(ForwardRef(Tabs))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      justify="center"
      spacing={4}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Skeleton))
          height={350}
          variant="rect"
          width={300}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Skeleton))
          height={350}
          variant="rect"
          width={300}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Skeleton))
          height={350}
          variant="rect"
          width={300}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Portfolio page should render without crashing 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={4}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      gutterBottom={true}
      variant="h2"
    >
      portfolio title
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      gutterBottom={true}
      variant="body1"
    >
      portfolio description
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Tabs))
      aria-label="porfolio filter"
      centered={true}
      id="tab-filter"
      onChange={[Function]}
      value="ALL"
    >
      <WithStyles(ForwardRef(Tab))
        label="ALL"
        value="ALL"
      />
      <WithStyles(ForwardRef(Tab))
        label="FRONT-END"
        value="FRONTEND"
      />
      <WithStyles(ForwardRef(Tab))
        label="BACK-END"
        value="BACKEND"
      />
    </WithStyles(ForwardRef(Tabs))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      justify="center"
      spacing={4}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="1"
      >
        <Cards
          description="Portfolio front-end 1 item description"
          github="githubexample"
          homepage="homepageexample"
          id={1}
          name="Portfolio front-end 1 item test"
          technologies={
            Array [
              "tech1",
              "tech2",
            ]
          }
          type="FRONT-END"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="2"
      >
        <Cards
          description="Portfolio front-end 2 item description"
          github={null}
          homepage={null}
          id={2}
          name="Portfolio front-end 2 item test"
          technologies={Array []}
          type="FRONT-END"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="3"
      >
        <Cards
          description="Portfolio back-end 3 item description"
          github="githubexample"
          homepage="homepageexample"
          id={3}
          name="Portfolio back-end 3 item test"
          technologies={
            Array [
              "tech1",
              "tech2",
            ]
          }
          type="BACK-END"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="4"
      >
        <Cards
          description="Portfolio back-end 4 item description"
          github={null}
          homepage={null}
          id={4}
          name="Portfolio back-end 4 item test"
          technologies={Array []}
          type="BACK-END"
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
